# 2DRenderer

./: .gitignore  CMakeLists.txt  README.md
Include/: Color.h  IndexBuffer.h  Log.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Shaders/: Default.shader
Src/: IndexBuffer.cpp  Log.cpp  Main.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Tests/Include/: Test.h  TestBatchRendering.h  TestClearColor.h  TestTexture2D.h
Tests/Src/: Test.cpp  TestBatchRendering.cpp  TestClearColor.cpp  TestTexture2D.cpp
